Correct focus visible styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,8 +20,8 @@ body {
 }
 
 a:focus-visible {
-  outline: 0.2rem dotted var(--color-bright-magenta);
-  outline-offset: 0.2rem;
+  outline: 0.3rem solid var(--color-white);
+  outline-offset: 0.3rem;
 }
 
 /* || Page header and logo styles */
@@ -77,8 +77,7 @@ a:focus-visible {
   transition: all 0.3s ease-out 0s;
 }
 
-.main-section__cta:hover,
-.main-section__cta:focus-visible {
+.main-section__cta:hover {
   background-color: var(--color-soft-magenta);
   color: var(--color-white);
   box-shadow: 0.125rem 0.25rem 0.5625rem 0.1875rem hsla(0, 0%, 0%, 0.26);
@@ -111,14 +110,12 @@ a:focus-visible {
   transform: scale(0.5);
 }
 
-.footer__social-link:hover,
-.footer__social-link:focus-visible {
+.footer__social-link:hover {
   border-color: var(--color-bright-magenta);
   transform: scale(1.1);
 }
 
-.footer__social-link:hover .footer__social-icon,
-.footer__social-link:focus-visible .footer__social-icon {
+.footer__social-link:hover .footer__social-icon {
   fill: var(--color-bright-magenta);
 }
 
